--- v2.2 (2017-xx-xx) ---
* Add new packages: qtactiveqt, qtdeclarative, qtmultimedia, qtx11extras,
  qttranslations, qtxmlpatterns, qtcanvas3d, qtcharts, qtdatavis3d, qtgamepad.
* Update in all configs:
  - FFMPEG_VER from 3.2.1 to 3.2.4
  - PROTOBUF_VER from 3.1.0 to 3.2.0
  - BOOST_VER from 1.62.0 to 1.63.0
  - OPENCV_VER from 2.4.13 to 3.2.0
  - QT5_VER from 5.7.0 to 5.8.0
* Update in all static configs:
  - LIBGPG_ERROR_VER from 1.25 to 1.26
  - LIBGCRYPT_VER from 1.7.3 to 1.7.6
  - OPENSSL_VER from 1.0.2j to 1.0.2k
  - FREETYPE_VER from 2.7 to 2.7.1

--- v2.1 (2017-01-18) ---
* Fix Qt5 build using GCC >= 6.x.
* Fix installation of fontconfig >= 2.12.0.
* Configure GCC with --enable-libgomp.
* Update in all configs:
  - GCC_EXTRA_VER from 5.4.0 to 6.3.0
  - BINUTILS_VER from 2.26 to 2.27
  - X264_VER from 20160706-2245 to 20161130-2245
  - FFMPEG_VER from 3.1.1 to 3.2.1
  - BOOST_VER from 1.61.0 to 1.62.0
  - PROJ_VER from 4.9.2 to 4.9.3
  - PROTOBUF_VER from 2.6.1 to 3.1.0
  - SDL2_VER from 2.0.4 to 2.0.5 (except AstraLinux 1.2)
* Update in all static configs:
  - JPEG_TURBO_VER from 1.5.0 to 1.5.1
  - TIFF_VER from 4.0.6 to 4.0.7
  - OPENSSL_VER from 1.0.2h to 1.0.2j
  - LIBGPG_ERROR_VER from 1.23 to 1.25
  - LIBGCRYPT_VER from 1.7.1 to 1.7.3
  - LIBPNG_VER from 1.2.56 to 1.2.57
  - FREETYPE_VER from 2.6.3 to 2.7
  - FONTCONFIG_VER from 2.12.0 to 2.12.1

--- v2.0 (2016-07-12) ---
* Add Makefile as a proxy for shell script make.sh.
* Add `make list` target: displays the list of available packages.
* Fix GCC 4.3.6 build using GCC >= 5.x.
* Fix GCC 4.7.4 build using GCC >= 5.x. [Thanks to Eugene Petrov]
* Add support of (versioned) extra settings files.
* Add new packages: exiv2, opencv. [Thanks to Eugene Petrov]
* Add new packages: yasm, libjpeg-turbo, protobuf, sdl2, qwt, boost,
  x264, ffmpeg.
* Fix build of mesa in systems with automake >= 1.15 and later.
* Update in all configs:
  - GCC_EXTRA_VER from 5.1.0 to 5.4.0
  - BINUTILS_VER from 2.25 to 2.26