@@ -1,6 +1,7 @@
 --- v2.2 (2017-xx-xx) ---
 * Add new packages: qtactiveqt, qtdeclarative, qtmultimedia, qtx11extras,
-  qttranslations, qtxmlpatterns, qtcanvas3d, qtcharts, qtdatavis3d, qtgamepad.
+  qttranslations, qtxmlpatterns, qtcanvas3d, qtcharts, qtdatavis3d, qtgamepad,
+  qtgraphicaleffects.
 * Update in all configs:
   - FFMPEG_VER from 3.2.1 to 3.2.4
   - PROTOBUF_VER from 3.1.0 to 3.2.0
